--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
+        }
+        mavenCentral()
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.google.gms:google-services:3.2.0'
         
 
@@ -23,6 +28,8 @@ allprojects {
         maven {
             url "https://maven.google.com" // Google's Maven repository
         }
+
+        maven { url "https://jitpack.io" }
     }
 }
 
