--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     }
 }
 
-repositories{
+repositories {
     maven { url "https://jitpack.io" }
 }
 
@@ -45,7 +45,18 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.5.2'
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.getbase:floatingactionbutton:1.9.0'
+    implementation 'com.wdullaer:materialdatetimepicker:1.2.1'
+
+    implementation 'com.bignerdranch.android:recyclerview-multiselect:+'
+    implementation 'com.wrapp.floatlabelededittext:library:0.0.6'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
+
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
+
 
 
 
@@ -54,6 +65,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:cardview-v7:26.1.0'
 
-    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 }
 apply plugin: 'com.google.gms.google-services'
