--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_take_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <receiver android:name=".MyReceiver" />
@@ -21,11 +20,22 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_application_id" />
 
+        <provider
+            android:name="com.facebook.FacebookContentProvider"
+            android:authorities="com.facebook.app.FacebookContentProvider1595854470451984"
+            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="OPEN_ACTIVITY_1" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Notification"
             android:label="@string/title_activity_notification"
@@ -51,6 +61,12 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="default_channel_id" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_baseline_notifications_none_24px" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
 
         <service android:name=".MyFirebaseInstanceIdService">
             <intent-filter>
@@ -72,19 +88,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WaterChart" />
-        <activity android:name=".LightChart" />
-
-        <activity android:name=".ReminderActivity" />
-        <activity android:name=".AddReminderActivity"
+        <activity
+            android:name=".WaterChart"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".LightChart"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ReminderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddReminderActivity"
             android:label="Add Reminder"
             android:parentActivityName=".ReminderActivity"
             android:theme="@style/AppTheme">
+
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ReminderActivity"
-            /></activity>
+                android:value=".ReminderActivityV2" />
+        </activity>
 
         <provider
             android:name=".AlarmReminderProvider"
@@ -95,6 +118,15 @@
             android:name=".ReminderAlarmService"
             android:exported="false" />
 
+
+
+        <activity
+            android:name=".ReminderActivityV2"
+            android:label="@string/title_activity_reminder_v2"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".RotationActivity"
+            android:screenOrientation="portrait" ></activity>
     </application>
 
 </manifest>
